# MICA

./: .gitattributes  .gitignore  .mailmap  CITATION.cff  LICENSE  README.md  package.json  pyproject.toml
artifacts/mica_top47_bundle/: metadata.json  model_manifest.csv  ood_predictions_bundle_check.csv  ood_solvents.csv  required_features.json  solvent_domain.csv  training_feature_ranges.csv
artifacts/mica_top47_bundle/features/: seed_42_features.json  seed_43_features.json  seed_44_features.json  seed_45_features.json  seed_46_features.json  seed_47_features.json  seed_48_features.json  seed_49_features.json  seed_50_features.json  seed_51_features.json  seed_52_features.json  seed_53_features.json  seed_54_features.json  seed_55_features.json  seed_56_features.json  seed_57_features.json  seed_58_features.json  seed_59_features.json  seed_60_features.json  seed_61_features.json
artifacts/mica_top47_bundle/models/: seed_42.ubj  seed_43.ubj  seed_44.ubj  seed_45.ubj  seed_46.ubj  seed_47.ubj  seed_48.ubj  seed_49.ubj  seed_50.ubj  seed_51.ubj  seed_52.ubj  seed_53.ubj  seed_54.ubj  (+7 more)
benchmarks/: run_mica_benchmark.py
benchmarks/outputs/: mica_benchmark_report.md  mica_benchmark_summary.json
docs/: ARCHITECTURE.md  CLI_STYLE.md  INSTALL.md  RELEASE_CHECKLIST.md  ROADMAP.md
examples/: example_benchmark.json  example_domain.csv  example_full98_features.csv  example_report_v02.html  example_report_v02.json
mica/: __init__.py  bundle.py  cli.py  domain.py  library.py  mixture.py  paths.py  predict.py  registry.py  reporting.py
mica/data/: solvent_library.csv
